--- a/indexBI1.html
+++ b/indexBI1.html
@@ -19,7 +19,7 @@
     <div class="content-container">
         <button id="startButton">
             Üzenet meg nyitása
-            <span class="additional-text">(Figyelem! Audiovizuális! :-D)</span>
+            <span class="additional-text">(Figyelem! Audiovizuális tartalom! :-D)</span>
         </button>
         <div id="letterContent"></div>
     </div>
