--- a/indexBI1.html
+++ b/indexBI1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="robots" content="noindex, nofollow"> <!-- Itt helyezd el a robots taget -->
+    <meta name="robots" content="noindex, nofollow"> <!robots tag -->
     <title>AIBI</title>
     <link rel="stylesheet" href="styles.css">
     <style>
